--- a/ListAnchor2.html
+++ b/ListAnchor2.html
@@ -10,6 +10,16 @@
 
 
 <body>
+    <nav>
+        <ul>
+
+            <li><a href="ListAnchor1.html">Home</a>></li>
+            <li><a href="About">Home1</a>></li>
+            <Li><a href="Whatever">Home2</a>></Li>
+
+        </ul>
+    </nav>
+
     <!--Readability Purposes-->
     <section>
     <h1>List of Mellya's Hobbies</h1>
@@ -28,6 +38,7 @@
     <ol>
         <li>Seattle</li>
             <ul>
+                <!--Individual descriptions for each city-->
                 <li>Seattle, a city on Puget Sound in the Pacific Northwest, is surrounded by water, <br>
                 mountains and evergreen forests, and contains thousands of acres of parkland. <br>
                 Washington State's largest city, it's home to a large tech industry, with Microsoft and <br>
