--- a/Paragraphs.html
+++ b/Paragraphs.html
@@ -19,7 +19,7 @@
     <br>
     <br>
     <br>
-
+<!--Continued headers that decrease in size-->
     <h2>Billie Eilish</h2>
         <p>Billie Eilish Pirate Baird O'Connell is an American singer-songwriter. <br>
         She first gained public attention in 2015 with her debut single "Ocean Eyes", <br>
