--- a/ListAnchor2.html
+++ b/ListAnchor2.html
@@ -32,44 +32,56 @@
     </ul>
     </section>
 
-<!--Section for the Nested List of cities I've lived in-->
+<!--Section for the Nested List of states-->
 <section>
     <h1>Nested List with Information</h1>
     <ol>
-        <li>Seattle</li>
+        <li>Alabama</li>
             <ul>
-                <!--Individual descriptions for each city-->
-                <li>Seattle, a city on Puget Sound in the Pacific Northwest, is surrounded by water, <br>
-                mountains and evergreen forests, and contains thousands of acres of parkland. <br>
-                Washington State's largest city, it's home to a large tech industry, with Microsoft and <br>
-                Amazon headquartered in its metropolitan area. The futuristic Space Needle, a 1962 World's <br>
-                Fair legacy, is its most iconic landmark.</li>
+                <!--Individual descriptions for each State-->
+                <li>Alabama is a state in the Southeastern region of the United States, bordered by Tennessee <br>
+                to the north; Georgia to the east; Florida and the Gulf of Mexico to the south; and Mississippi to the west. <br>
+                Alabama is the 30th largest by area and the 24th-most populous of the U.S. states. With a total of 1,500 miles <br>
+                (2,400 km) of inland waterways, Alabama has among the most of any state.</li>
             </ul>
         <hr>
-        <li>Winnetka</li>
+        <li>Washington</li>
              <ul>
-                 <li>Winnetka is a neighborhood in the west-central San Fernando Valley in the city of Los Angeles. <br>
-                It is a highly ethnically diverse area, both for the city and for Los Angeles County, with a relatively <br>
-                large percentage of Hispanic and Asian people. Winnetka was founded in 1922 as a small farming community</li>
+                 <li>Washington, officially the State of Washington, is a state in the Pacific Northwest region of the Western United States. <br>
+                Named for George Washington—the first U.S. president—the state was formed from the western part of the Washington Territory, <br>
+                which was ceded by the British Empire in 1846, in accordance with the Oregon Treaty in the settlement of the Oregon boundary dispute. <br>
+                The state, which is bordered on the west by the Pacific Ocean, Oregon to the south, Idaho to the east, and the Canadian province of <br>
+                British Columbia to the north—was admitted to the Union as the 42nd state in 1889. Olympia is the state capital; the state's largest city <br>
+                is Seattle. Washington is often referred to as Washington state to distinguish it from the nation's capital, Washington, D.C</li>
             </ul>
         <hr>
-        <li>Las Trojes</li>
+        <li>Oklahoma</li>
             <ul>
-                <li>The town of Las Trojes is located in the Municipality of Jocotepec (in the State of Jalisco). There are <br>
-                705 inhabitants. In the list of the most populated towns of the whole municipality, it is the number #10 of <br>
-                the ranking. Las Trojes is at 1,828 meters of altitude.</li>
+                <li>Oklahoma is a state in the South Central region of the United States, bordered by Texas on the south and west, Kansas on the north, Missouri on <br>
+                the northeast, Arkansas on the east, New Mexico on the west, and Colorado on the northwest. Partially in the western extreme of the Upland South, <br>
+                it is the 20th-most extensive and the 28th-most populous of the 50 United States. Its residents are known as Oklahomans (or colloquially "Okies"), <br>
+                and its capital and largest city is Oklahoma City.</li>
             </ul>
         <hr>
-        <li>Ellensburg</li>
+        <li>New York</li>
         <ul>
-            <li>Ellensburg is a city in and the county seat of Kittitas County, Washington, United States. It is located just east <br>
-             of the Cascade Range near the junction of Interstate 90 and Interstate 82. The population was an estimated 21,111 as of 2019.</li>
+            <li>New York, often called New York City (NYC) to distinguish it from the state of New York, is the most populous city in the United States. <br>
+            With a 2020 population of 8,804,190 distributed over 300.46 square miles, New York City is also the most densely populated major city <br>
+            in the United States. Located at the southern tip of the state of New York, the city is the center of the New York metropolitan area, the largest <br>
+            metropolitan area in the world by urban area. With over 20.1 million people in its metropolitan statistical area and 23.5 million in its combined <br>
+            statistical area as of 2020, New York is one of the world's most populous megacities. New York City has been described as the cultural, financial, and media <br>
+            capital of the world, and is a significant influence on commerce, entertainment, research, technology, education, politics, tourism, dining, art, fashion, and <br>
+            sports. It is the most photographed city in the world. Home to the headquarters of the United Nations, New York is an important center for international diplomacy, <br>
+            and has sometimes been called the capital of the world.</li>
         </ul>
         <hr>
-        <li>Burien</li>
+        <li>California</li>
         <ul>
-            <li>Burien is a suburban city in King County, Washington, United States, located south of Seattle on Puget Sound. As of the <br>
-            2010 census, Burien's population was 33,313, which is a 49.7% increase since incorporation in 1993.</li>
+            <li>California is a state in the Western United States. California borders Oregon to the north, Nevada and Arizona to the east, the Mexican state of <br>
+            Baja California to the south; and has a coastline along the Pacific Ocean to the west. With over 39.5 million residents across a total area of approximately <br>
+            163,696 square miles (423,970 km2), it is the most populous and the third-largest U.S. state by area. It is also the most populated subnational entity in <br>
+            North America and the 34th most populous in the world. The Greater Los Angeles area and the San Francisco Bay Area are the nation's second and fifth most populous <br>
+            urban regions respectively, with the former having more than 18.7 million residents and the latter having over 9.6 million.</li>
         </ul>
         <hr>
     </ol>
