--- a/tables1.html
+++ b/tables1.html
@@ -8,30 +8,51 @@
 </head>
 
 <body>
+    <!--Head of the Table-->
     <table>
-        <tr>
-            <th>Column 1</th>
-            <th>Column 2</th>
-            <th>Column 3</th>
-        </tr>
+        <thead>
+            <tr>
+                <th>Pokemon Name</th>
+                <th>Type</th>
+                <th>Abilities</th>
+                <th>Weakness</th>
+                <th>Evolutiion</th>
+            </tr>
+        </thead>
 
-        <tr>
-            <td>Info1</td>
-            <td>Info2</td>
-            <td>Info3</td>
-        </tr>
+        <tbody>
+            <tr>
+                <td>Info1</td>
+                <td>Info2</td>
+                <td>Info3</td>
+                <td>Info4</td>
+                <td>Info5</td>
+            </tr>
 
-        <tr>
-            <td>Info1</td>
-            <td>Info2</td>
-            <td>Info3</td>
-        </tr>
+             <tr>
+                <td>Info1</td>
+                <td>Info2</td>
+                <td>Info3</td>
+                <td>Info4</td>
+                <td>Info5</td>
+            </tr>
 
-        <tr>
-            <td>Info1</td>
-            <td>Info2</td>
-            <td>Info3</td>
-        </tr>
+            <tr>
+                <td>Info1</td>
+                <td>Info2</td>
+                <td>Info3</td>
+                <td>Info4</td>
+                <td>Info5</td>
+            </tr>
+
+            <tr>
+                <td>Info1</td>
+                <td>Info2</td>
+                <td>Info3</td>
+                <td>Info4</td>
+                <td>Info5</td>
+            </tr>
+      </tbody>
 
     </table>
 
