--- a/forms1.html
+++ b/forms1.html
@@ -32,7 +32,7 @@
 
             </form>
    </Section>
-
+<hr>
    <Section>
         <h1>Query Strings</h1>
         <!--Created a form to push information to the reddit search results -->
@@ -58,10 +58,35 @@
                 <button>Search Google</button>
 
             </form>
+   </Section>
+<br>
+<hr>
+   <!-- -->
+   <Section>
+       <h1>Checkboxes and Radio Buttons</h1>
+        <form action="/birds">
+            <input type="Checkbox" name="agree_tos" id="agree">
+            <label for="agree"> I agree to everything</label>
+
+            <p>
+                <label for="s">Small:</label>
+                <input type="radio" name="size" id="s" value="s"> 
+
+                <label for="s">Medium:</label>
+                <input type="radio" name="size" id="m" value="m">
+
+                <label for="s">Large:</label>
+                <input type="radio" name="size" id="l" value="l">
+
+            </p>
 
 
+            <button></button>            
+
+        </form>
    </Section>
 
-   
+
+
 </body>
 </html>
