--- a/forms1.html
+++ b/forms1.html
@@ -67,7 +67,7 @@
         <form action="/birds">
             <input type="Checkbox" name="agree_tos" id="agree">
             <label for="agree"> I agree to everything</label>
-
+            <!---->
             <p>
                 <label for="s">Small:</label>
                 <input type="radio" name="size" id="s" value="s"> 
@@ -80,8 +80,22 @@
 
             </p>
 
+            <!--Block element-->
 
-            <button></button>            
+            <p>
+                <label for="colors">What is your favorite color</label>
+                <!--Attribute of element -->
+                <select name="colors" id="colors">
+                    
+                    <option value="Red">Red</option>
+
+                    <option value="Blue">Blue</option>
+
+                    <option value="Green">Green</option>
+
+                </select>
+            </p>
+            <button>Mellya</button>            
 
         </form>
    </Section>
