--- a/forms1.html
+++ b/forms1.html
@@ -80,11 +80,11 @@
 
             </p>
 
-            <!--Block element-->
+            <!--A new block element-->
 
             <p>
                 <label for="colors">What is your favorite color</label>
-                <!--Attribute of element -->
+                <!--Attributes of colors element -->
                 <select name="colors" id="colors">
                     
                     <option value="Red">Red</option>
@@ -94,6 +94,13 @@
                     <option value="Green">Green</option>
 
                 </select>
+            </p>
+            <!--Created a new block element for a scroll bar-->
+            <p>
+                <label for="sbar">Mellya's ScrollBar</label>
+
+                <input type="range" id="sbar" min="0" max="10" name="scrollbar">
+
             </p>
             <button>Mellya</button>            
 
