--- a/forms1.html
+++ b/forms1.html
@@ -102,6 +102,15 @@
                 <input type="range" id="sbar" min="0" max="10" name="scrollbar">
 
             </p>
+            <!--Created another block element for a text area-->
+            <p>
+
+                <label for="requests">Type In Special Requests</label>
+                
+                <textarea id="requests" name="TextArea" rows="5" cols="15" placeholder="Type Here!"></textarea>
+
+            </p>
+
             <button>Mellya</button>            
 
         </form>
