--- a/forms1.html
+++ b/forms1.html
@@ -106,17 +106,38 @@
             <p>
 
                 <label for="requests">Type In Special Requests</label>
-                
+
                 <textarea id="requests" name="TextArea" rows="5" cols="15" placeholder="Type Here!"></textarea>
 
             </p>
-
             <button>Mellya</button>            
-
         </form>
    </Section>
 
+<hr>
+<!---->
+<section>
+    <form action="/bananas">
 
+        <!--  -->
+        <label for="monte">TextBox</label>
+        <input type="text" name="textBox" id="monte" required>
+
+        <!--  -->
+        <p>
+        <label for="password"></label>
+        <input type="text" name="pword" id="password" minlength="5" maxlength="10">
+        </p>
+        <!--  -->
+        <p>
+            <input type="email" required>
+        </p>
+
+        <button type="submit">Validation Button</button>
+
+    </form>
+
+</section>
 
 </body>
 </html>
