--- a/Paragraphs.html
+++ b/Paragraphs.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Class 1</title>
+
+    <link rel="stylesheet" href="paragraphs.css">
 </head>
 
 <!-- Here are the headers and paragraph information of Artists I've seen this year. -->
