--- a/forms1.html
+++ b/forms1.html
@@ -61,13 +61,13 @@
    </Section>
 <br>
 <hr>
-   <!-- -->
+   <!-- A new block element to display a checkbox -->
    <Section>
        <h1>Checkboxes and Radio Buttons</h1>
         <form action="/birds">
             <input type="Checkbox" name="agree_tos" id="agree">
             <label for="agree"> I agree to everything</label>
-            <!---->
+            <!--Here is a display of the radio button element -->
             <p>
                 <label for="s">Small:</label>
                 <input type="radio" name="size" id="s" value="s"> 
@@ -80,7 +80,7 @@
 
             </p>
 
-            <!--A new block element-->
+            <!--A new block element for Combo Box-->
 
             <p>
                 <label for="colors">What is your favorite color</label>
