--- a/StylingColors.html
+++ b/StylingColors.html
@@ -12,11 +12,13 @@
 </head>
 
 <body>
-    
+    <!--Here's my first header-->
     <h1>Make This Text Green</h1>
 
+    <!--A second Header tag-->
     <h2>Make This Text Purple</h2>
 
+    <!--A paragraph tag to later switch the font and background color-->
     <p> 
         Are you ready, kids?
         Aye, aye, captain!
@@ -39,6 +41,7 @@
         Ah, ha ha, hahahahahahahahaha!  
     </p>
 
+    <!--A button tag to create more styling edits in the css file-->
     <button>Blue with White text</button>
 </body>
 </html>
