I think I'm caught up

--- a/MessageBoard.html
+++ b/MessageBoard.html
@@ -49,6 +49,11 @@
             </Section>
     </main>
 
+    <p>What are we doing? I'm mad condfused rn. I guess i have to kick it back to these panopto recordings. What are we doing? I'm mad condfused rn. 
+    I guess i have to kick it back to these panopto recordings. What are we doing? I'm mad condfused rn. I guess i have to kick it back to these 
+    panopto recordings. What are we doing? I'm mad condfused rn. I guess i have to kick it back to these panopto recordings. What are we doing? I'm mad 
+    condfused rn. I guess i have to kick it back to these panopto recordings. What are we doing? I'm mad condfused rn. I guess i have to kick it back to these 
+    panopto recordings.</p>
 
     <footer>
         <nav>
