Henok taught us

--- a/ClassIDselectors.html
+++ b/ClassIDselectors.html
@@ -5,22 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Class and ID Selectors HW - MV</title>
+    <!--Here is my link tag for my style sheet-->
+    <link rel="stylesheet" href="ClassIDselectors.css">
 </head>
 <body>
     <h1>Monte's Top College Football Programs Of All Time</h1>
 
-   
+    <section>
         <ol>
-            <li>Alabama</li>
-            <li>Notre Dame</li>
-            <li>Michigam</li>
-            <li>Ohio State</li>
-            <li>Oklahoma</li>
-            <li>Southern California</li>
-            <li>Texas</li>
-            <li>Miami</li>
-            <li>Nebraska</li>
+            <li class="crimson">Alabama</li>
+            <li class="green">Notre Dame</li>
+            <li class="yellow">Michigam</li>
+            <li class="red">Ohio State</li>
+            <li class="crimson">Oklahoma</li>
+            <li class="red">Southern California</li>
+            <li class="orange">Texas</li>
+            <li class="green">Miami</li>
+            <li class="red">Nebraska</li>
         </ol>
-    
+    </section>
+
+    <section>
+        <button id="yes">YES I AGREE</button>
+        <button id="no">NO I DON'T AGREE</button>
+    </section>  
+
 </body>
 </html>
