comments in the code

--- a/ClassIDselectors.html
+++ b/ClassIDselectors.html
@@ -9,10 +9,13 @@
     <link rel="stylesheet" href="ClassIDselectors.css">
 </head>
 <body>
+    <!--Here is my Header tag-->
     <h1>Monte's Top College Football Programs Of All Time</h1>
 
+    <!--Here is the start to my ordered list-->
     <section>
         <ol>
+            <!--Each list item has a class selector-->
             <li class="crimson">Alabama</li>
             <li class="green">Notre Dame</li>
             <li class="yellow">Michigam</li>
@@ -24,7 +27,7 @@
             <li class="red">Nebraska</li>
         </ol>
     </section>
-
+    <!--Here are 2 buttons with ID tags -->
     <section>
         <button id="yes">YES I AGREE</button>
         <button id="no">NO I DON'T AGREE</button>
