--- a/NavComponents.html
+++ b/NavComponents.html
@@ -70,7 +70,53 @@
         </div>
     </nav>
 
-   
+    <br>
+    <br>
+
+    <!--Components-->
+    <section>
+        <!--Container with the card to visually see the container on the screen-->
+        <div class="container card">
+            <h1>Bootstrap Components Without Classes</h1>
+            <!---->
+            <h1 class="display-1 text-center text-info">Components With Bootstrap Class</h1>
+            <!---->
+            <button type="button" class="btn btn-dark">Like</button>
+            <button type="button" class="btn btn-warning">Comment</button>
+            <button type="button" class="btn btn-light">Subscribe</button>
+            <!--button w a different outline color-->
+            <button type="button" class="btn btn-outline-info">PLEASE</button>
+
+        <br>
+        <hr>
+        <br>
+            <!--Here's a second header tag with a bootstrap component and a paragraph-->
+            <h2 class="display-4 text-center">Some Paragraph Text</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo cum ipsa voluptatibus 
+            natus totam quam autem consequuntur enim alias doloribus voluptas, similique sunt blanditiis 
+            praesentium nemo odit commodi exercitationem culpa?</p>  
+
+             <!---->
+            <h3 class="display-4">Group Of Header Buttons</h3>
+                <div class="btn-group">
+                    <button class="btn btn-success">One</button>
+                    <button class="btn btn-success">Two</button>
+                    <button class="btn btn-success">Three</button>
+                </div>
+        <br>
+        <hr>
+        <br>
+                <img src="https://static01.nyt.com/images/2022/05/05/arts/05bad-bunny1/05bad-bunny1-videoSixteenByNineJumbo1600.jpg" alt="">
+
+                <blockquote class="blockquote text-left bg-light">
+                    <p class="mb-2">
+                        "This is a quote. Mellya loves El Conejito Malo.""
+                    </p>
+                    <footer class="blockquote-footer">SomethingSomething</footer>
+                </blockquote>
+        </div>
+    </section>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
