--- a/bootexercise.html
+++ b/bootexercise.html
@@ -5,13 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootstrappin</title>
-
+    <!--Here's the link to the style sheet-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
 </head>
 <body>
-    
-
+    <!--Here's a nested section-->
+    <section>
+        <!--Here's the header tag with its display set to a size 4, text centered, a black background and white text-->
+        <h1 class="display-4 text-center text-white bg-dark">The Matrix</h1>
+        <!--Here's the first div element for our question, it's styled as a alert message -->
+        <div class="alert alert-danger text-center" role="alert">Are you going to choose the blue pill or the red pill?</div>
+        <!--Here are 2 button that represent the 2 options to answer from for the question in the first div element, they both display predefined button styles-->
+        <div class="text-center">
+            <button class="btn btn-primary">Take Blue Pill</button>
+            <button class="btn btn-danger">Take Red Pill</button>
+        </div>
+    </section>
 
 
     
