running though the tree structure

--- a/domWalkthrough.html
+++ b/domWalkthrough.html
@@ -27,7 +27,7 @@
 
             </form>
             <hr>
-            <!--Here's the unordered list for Items-->
+            <!--Here's the unordered list of Items-->
             <h2 class="title">Items</h2>
                 <ul id="items" class="list-group">
                     <li class="list-group-item">Item 1</li>
